src/test/resources/etapa3/failing/wrongParamTypeInConst.ru
struct A {
    Int a;
}

impl A {
    .(C c) {}
    fn method_1 () -> void {}
    st fn method_2(Int wala, Str jeje) -> Int {
        ret 1;
    }
}

start {}